--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,ebook,oneside,openany]{memoir} %use Pdflatex
 \usepackage[paperwidth=6in, paperheight=9.2in,bmargin=.75in,left=0.5in,right=0.5in,top=0.7in]{geometry} %page size
+% Compile with pdftex
 
 %% Table of contents columns, remove if you wish
 \usepackage[toc]{multitoc}
@@ -54,7 +55,7 @@
   \vfill
   \null
   \cleardoublepage
-  }
+}
 \makeatother
 
 %% BEGIN DOCUMENT
